try to fix arm apple m4 issue