@@ -45,8 +45,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,14 +55,20 @@
         <dependency>
             <groupId>com.github.tjake</groupId>
             <artifactId>jlama-core</artifactId>
-            <version>0.5.1</version>
+            <version>0.8.4</version>
+            <!--<systemPath>${project.basedir}/src/main/resources/libs/jlama-core-0.8.4.jar</systemPath>-->
+            <!--<scope>system</scope>-->
         </dependency>
         <dependency>
             <groupId>com.github.tjake</groupId>
             <artifactId>jlama-native</artifactId>
-            <version>0.5.1</version>
+            <version>0.8.4</version>
+            <!--<systemPath>${project.basedir}/src/main/resources/libs/jlama-native-0.8.4-osx-aarch_64.jar</systemPath>-->
+            <!--<scope>system</scope>-->
             <!--注意：部署环境和开发环境架构差异-->
-            <classifier>${os.detected.name}-${os.detected.arch}</classifier>
+            <!--            <classifier>osx-aarch_64</classifier>-->
+            <classifier>linux-x86_64</classifier>
+            <!--            <classifier>${os.detected.name}-${os.detected.arch}</classifier>-->
         </dependency>
     </dependencies>
 
@@ -89,6 +93,9 @@
                             <artifactId>lombok</artifactId>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
